--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
       <link rel="stylesheet" href="./Assets/CSS/style.css">
       <link rel="shortcut icon" href="./Assets/IMG/Manoj logo-2.jpg" type="image/x-icon">
-      <title>MedCare</title>
+      <title>MediCare</title>
   </head>
 <body>
 <!-- Preloader start -->
