--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- navbar-expand at breakpoints shows the responsiveness, bg-dark(background dark) navbar-dark(text-color) -->
 <nav class="navbar navbar-expand-lg bg-light py-3 fixed-top">
   <div class="container">
-    <a href="index.html" class="navbar-brand">Med<span class="text-primary">Care</span></a>
+    <a href="index.html" class="navbar-brand">Medi<span class="text-primary">Care</span></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
       <span class="navbar-toggler-icon"></span>
