--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         Our Team
     </h2>
     <p class="lead text-center text-white mb-5">
-        Our Team all have 3+ years working as a web developer in the industry
+        Our Team all have 3+ years working the industry
     </p>
       <div class="row g-4 container">
         <div class="col-md-6 col-lg-3 mr-3">
