--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
       <div class="col-md-4 p-0 mx-auto mb-3">
         <h5 class="text-uppercase text-warning">Contact</h5>
-        <p><i class="bi bi-house-door"></i> Marathahalli Bangalore</p>
+        <p><i class="bi bi-house-door"></i> Nellore, AP</p>
         <p><i class="bi bi-envelope"></i> Manoj.kilari99@gmail.com</p>
         <p><i class="bi bi-phone"></i> 9502360627</p>
       </div>
