--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
       <link rel="stylesheet" href="./Assets/CSS/style.css">
-      <link rel="shortcut icon" href="./Assets/IMG/Manoj logo-2.jpg" type="image/x-icon">
+      <link rel="shortcut icon" href="./Assets/IMG/m-logo-3.png" type="image/x-icon">
       <title>MediCover</title>
   </head>
 <body>
